--- a/src/components/Buttton/Button.module.css
+++ b/src/components/Buttton/Button.module.css
@@ -16,3 +16,15 @@
   color: #fff;
   border-color: #000;
 }
+
+.btn-lt-green {
+  background-color: #d4e9e2;
+  color: #1e3932;
+  border-color: #1e3932;
+}
+
+.btn-dart-green {
+  background-color: #006241;
+  color: #fff;
+  border-color: #fff;
+}
