--- a/src/components/TextSection/TextSetion.module.css
+++ b/src/components/TextSection/TextSetion.module.css
@@ -2,13 +2,16 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 15rem;
+  /* height: 15rem; */
 }
 
 .section-content {
   width: 45%;
   margin: 0 auto;
   text-align: center;
+}
+.inner-text {
+  margin-top: 5rem;
 }
 
 .section-content p:nth-child(2) {
