--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -19,7 +19,7 @@ footer {
 .svg-list {
   list-style: none;
   display: flex;
-  width: 20%;
+  width: 35%;
   justify-content: space-between;
 }
 
@@ -37,4 +37,22 @@ footer {
 
 .term-links a:hover {
   text-decoration: underline;
+}
+
+@media (max-width: 768px) {
+  .term-links {
+    flex-direction: column;
+  }
+
+  .term-links span {
+    display: none;
+  }
+
+  .term-links p {
+    padding: 1rem 0;
+  }
+
+  .svg-list {
+    width: 50%;
+  }
 }
