--- a/src/components/ImageContainer/ImageContainer.module.css
+++ b/src/components/ImageContainer/ImageContainer.module.css
@@ -26,13 +26,35 @@
   padding: 3rem;
 }
 
+.content h1 {
+  font-size: 3rem;
+  letter-spacing: 2px;
+}
+
+.content p {
+  font-size: 1.5rem;
+  font-weight: 500;
+  margin: 1.5rem 0;
+}
+
+.content li {
+  font-size: 1rem;
+  font-weight: 500;
+  margin: 0.5rem 0;
+}
+
+.content ul {
+  margin: 1.5rem 0;
+  padding-left: 2rem;
+}
+
 .inner {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  /* padding: 2rem; */
   height: 100%;
+  text-align: center;
 }
 
 .text-light {
@@ -43,4 +65,14 @@
 .text-dark {
   background-color: #006241;
   color: #fff;
+}
+
+@media (max-width: 768px) {
+  .container {
+    flex-direction: column;
+  }
+
+  .img-section {
+    width: 100%;
+  }
 }
